[Catalog] API Endpoints for Architecture & Service Deploy options
